--- a/public/package.json
+++ b/public/package.json
@@ -7,8 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "start": "vite preview"
+    "preview": "vite preview --port 3000 --host",
+    "start": "vite preview --port 3000 --host"
   },
   "dependencies": {
     "@types/lodash": "^4.17.13",
