--- a/public/package.json
+++ b/public/package.json
@@ -11,11 +11,15 @@
     "start": "vite preview --port 3000 --host"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.28.0",
     "@types/lodash": "^4.17.13",
+    "axios": "^1.6.7",
+    "clsx": "^2.1.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.0.2",
+    "react-toastify": "^10.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
