--- a/public/package.json
+++ b/public/package.json
@@ -15,6 +15,7 @@
     "@types/lodash": "^4.17.13",
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.15.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
