--- a/public/package.json
+++ b/public/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.28.0",
+    "@types/intro.js": "^5.1.5",
     "@types/lodash": "^4.17.13",
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
     "framer-motion": "^11.15.0",
+    "intro.js": "^7.2.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
