--- a/public/package.json
+++ b/public/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-ga4": "^2.1.0",
     "react-router-dom": "^7.0.2",
     "react-toastify": "^10.0.4"
   },
